--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,1 +1,6 @@
-<p>comment works!</p>
+<div *ngIf="comment">
+  <div>
+    {{comment.id}}. -{{comment.name}}
+    <button (click)="getDetails()">getDetails</button>
+  </div>
+</div>
