--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,3 +1,3 @@
-<div routerLinkActive="activate" >
-  {{user.id}}. - <a routerLink="{{user.id}}"> {{user.name}} </a>
+<div routerLinkActive="active" >
+  {{user.id}}. - <a routerLink="{{user.id}}" [state]="{user}"> {{user.name}} </a>
 </div>
