--- a/src/app/modules/comment/components/comments/comments.component.html
+++ b/src/app/modules/comment/components/comments/comments.component.html
@@ -1,1 +1,3 @@
-<p>comments works!</p>
+<app-comment *ngFor="let comment of comments" [comment]="comment"></app-comment>
+
+<router-outlet></router-outlet>
