--- a/src/app/modules/user/components/user-details/user-details.component.html
+++ b/src/app/modules/user/components/user-details/user-details.component.html
@@ -1,3 +1,5 @@
-<div>id: {{user.id}}</div>
-<div>name: {{user.name}}</div>
-<div>email: {{user.email}}</div>
+<div>
+  <div>id: {{user.id}}</div>
+  <div>name: {{user.name}}</div>
+  <div>email: {{user.email}}</div>
+</div>
